--- a/.github/workflows/Rdp1.yml
+++ b/.github/workflows/Rdp1.yml
@@ -13,6 +13,7 @@ jobs:
     - name: Downloading files
       run: |
         Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
+        Expand-Archive ngrok.zip
     - name: Copy NSSM & Ngrok to Windows Directory.
       run: | 
         copy nssm.exe C:\Windows\System32
