--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -14,5 +14,6 @@ jobs:
        sudo apt update
        sudo apt install openssh-server
        sudo ufw allow ssh
-       ip a
+       sudo systemctl enable ssh
+       
 
