--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -14,7 +14,7 @@ jobs:
       run: | 
         Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
         Expand-Archive ngrok.zip
-        ls
+        Rename-Item ngrok ngrok.exe
         copy nssm.exe C:\Windows\System32
         copy ngrok C:\Windows\System32
     - name: Connect your NGROK account
