--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -16,7 +16,7 @@ jobs:
         Expand-Archive ngrok.zip
         Rename-Item ngrok ngrok.exe
         copy nssm.exe C:\Windows\System32
-        copy ngrok C:\Windows\System32
+        copy ngrok.exe C:\Windows\System32
     - name: Connect your NGROK account
       run: .\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
       env:
