--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -14,7 +14,7 @@ jobs:
       run: | 
          choco install ngrok
     - name: Connect your NGROK account
-      run: .\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
+      run: ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN2 }}
     - name: Make YML file for NGROK.
