--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -14,9 +14,7 @@ jobs:
       run: | 
          choco install ngrok
     - name: Connect your NGROK account
-      run: ngrok authtoken $Env:NGROK_AUTH_TOKEN
-      env:
-        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN2 }}
+      run: ngrok authtoken 1uL4OcPdCc2qPCM0zDh46H3BSEN_814ouYpLhQnrgTu7jNjJd
     - name: Make YML file for NGROK.
       run: start NGROK-US.bat
     - name: Enable RDP Access.
