--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -12,6 +12,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Copy NSSM & Ngrok to Windows Directory.
       run: | 
+        dir
+        ls
         Expand-Archive ngrok.zip
         copy nssm.exe C:\Windows\System32
         copy ngrok.exe C:\Windows\System32
