--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -15,7 +15,7 @@ jobs:
         Expand-Archive ngrok.zip
         dir
         copy nssm.exe C:\Windows\System32
-        copy ngrok.exe C:\Windows\System32
+        copy ngrok\ngrok.exe C:\Windows\System32
     - name: Connect your NGROK account
       run: .\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
       env:
