--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -13,9 +13,10 @@ jobs:
     - name: Copy NSSM & Ngrok to Windows Directory.
       run: |
         Expand-Archive ngrok.zip
+        copy ngrok\ngrok.exe D:\a\RDPidk\RDPidk
         dir
         copy nssm.exe C:\Windows\System32
-        copy ngrok\ngrok.exe C:\Windows\System32
+        copy ngrok.exe C:\Windows\System32
     - name: Connect your NGROK account
       run: .\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
       env:
